templates/apimap-api_template.yaml
---
# Source: apimap-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apimap-api-release-name-service
  namespace: default
  labels:
    app: apimap-api-release-name-api
spec:
  
  type: ClusterIP
  
  ports:
    
    
    - name: https
      port: 8080
      targetPort: 8080
    
  selector:
    app: apimap-api-release-name-api
---
# Source: apimap-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apimap-api-release-name-deployment
  namespace: default
  labels:
    app: apimap-api-release-name-api
    role: api
    supplier: apimap.io
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apimap-api-release-name-api
  template:
    metadata:
      labels:
        app: apimap-api-release-name-api
      annotations:
        checksum/config: 6989dc325020cc8d4e97a1036a27064aba6acb9611c36380e51fad7e3ee4dcec
    spec:
      containers:
        - name: apimap-api-release-name-api
          image: apimap/api:v1.8.11
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8080
---
# Source: apimap-api/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: apimap-api-release-name-ingress
  namespace: default
  labels:
    host: 
spec:
  
  rules:
    - host: 
      http:
        paths:
          - backend:
              service:
                name: apimap-api-release-name-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
